<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="navigation_view">

    <item android:title="@string/our_services">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/main_navigation_fragment_menu_outsourcing"
                    android:title="@string/outsourcing"
                    android:icon="@drawable/ic_shopping_cart_black_24dp" />

                <item
                    android:id="@+id/main_navigation_fragment_menu_erp"
                    android:icon="@drawable/ic_beenhere_black_24dp"
                    android:title="@string/erp" />

                <item
                    android:id="@+id/main_navigation_fragment_menu_it_security"
                    android:icon="@drawable/ic_security_black_24dp"
                    android:title="@string/it_security" />

                <item
                    android:id="@+id/main_navigation_fragment_menu_application_development"
                    android:icon="@drawable/ic_code_black_24dp"
                    android:title="@string/application_development" />
            </group>
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_navigation_fragment_menu_promotions"
            android:title="@string/promotions"
            android:icon="@drawable/ic_shopping_cart_black_24dp" />

        <item
            android:id="@+id/main_navigation_fragment_menu_contacts"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="@string/contacts" />
    </group>
</menu>
